@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.996 2003/05/01 14:11:34 patrickmast Exp $
+ * $Id: ChangeLog,v 1.997 2003/05/01 14:24:55 lculik Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-05-02 09:28 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/vm/macro.c
+    ! Fixed hb_compGenPushSymbol() to verify that an existing symbol is indeed a function
+      as opposed to a Memvar (Clipper compatibility).
 
 2003-05-01 11:06 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
   * source/rdd/dbfntx/dbfntx1.c
